added statuses resource resolving for timeline
Created TimelineService to handle REST for timeline/mentions/favorites
tabs

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -169,6 +169,7 @@
     <script src="/app/shared/services/ProfileService.js"></script>
     <script src="/app/shared/services/StatusService.js"></script>
     <script src="/app/shared/services/TagService.js"></script>
+    <script src="/app/shared/services/TimelineService.js"></script>
     <script src="/app/shared/services/UserService.js"></script>
     <script src="/app/shared/services/SearchService.js"></script>
     <!------------------------------------------------------------------------->
