--- a/src/main/webapp/app/shared/homeContent/HomeContentView.html
+++ b/src/main/webapp/app/shared/homeContent/HomeContentView.html
@@ -6,18 +6,23 @@
                 <div class="tatam pointer tatam-border-lr tatam-hover" style="display: block;">
                     <div id="before">
                     </div>
-                    <div id="current" ng-mouseenter="showButtonRow = true" ng-mouseleave="showButtonRow = false" ng-class="{ 'favorite': status.favorite, 'share': status.shareByMe, 'both': status.favorite && status.shareByMe }">
+                    <div id="current" ng-mouseenter="showButtonRow = true" ng-mouseleave="showButtonRow = false" ng-class="{ 'favorite': status.favorite, 'share': status.type != 'MENTION_FRIEND' && status.shareByMe, 'both': status.favorite && status.shareByMe }">
+                    <!-- Make shareByMe=false for MENTION_FRIEND type statuses -->
                         <div class="pull-left background-image-fffix statusitem-img">
-                            <a ui-sref="home.profile({ username: status.username })">
+                            <a ng-if="status.type == 'STATUS'"  ui-sref="home.profile({ username: status.username })">
                                 <div class="img img-rounded img-medium" ng-style="{ 'background-image': 'url(' + status.avatarURL + ')' }"></div>
                             </a>
                         </div>
                         <div id="status-content-container">
                             <h5 class="statusitem-name">
+                                <span ng-if="status.type == 'MENTION_SHARE'" class="glyphicon glyphicon-retweet"></span>
+                                <span ng-if="status.type == 'MENTION_FRIEND'" class="glyphicon glyphicon-user"></span>
                                 <a ui-sref="home.profile({ username: status.username })">
                                     <strong>{{ status.firstName + ' ' + status.lastName }}</strong>
                                     <small>@{{ status.username }}</small>
                                 </a>
+                                <span ng-if="status.type == 'MENTION_SHARE'" translate="tatami.home.status.shared"></span>
+                                <span ng-if="status.type == 'MENTION_FRIEND'" translate="tatami.home.status.followed"></span>
                                 <small> · </small>
                                 <a ui-sref="home.status({ status: status.statusId })">
                                     <small ng-if="!isOneDayOrMore(status.statusDate)" title="{{ status.statusDate | amDateFormat:'h:mm A - D MMM YYYY'}}" am-time-ago="status.statusDate"></small>
@@ -26,7 +31,7 @@
                                 <!-- Replace hover title with hover bubble -->
                             </h5>
                             
-                            <div class="markdown" ng-bind-html="status.content | emoticon | markdown"></div>
+                            <div class="markdown" ng-class="{ 'mention-share': status.type == 'MENTION_SHARE' }" ng-bind-html="status.content | emoticon | markdown"></div>
 
                             <small ng-if="status.groupId">
                                 <a class="label" ng-class="status.publicGroup ? 'label-info' : 'label-warning'" ui-sref="home.group({ group: status.groupId })">
@@ -61,32 +66,32 @@
                             </small>
                         </div>
 
-                        <div ng-style="{ visibility: showButtonRow ? 'visible': 'hidden' }" style="display: block;" id="buttons" class="mediumHeight little-marge-top">
+                        <div ng-if="status.type == 'STATUS'" ng-style="{ visibility: showButtonRow ? 'visible': 'hidden' }" style="display: block;" id="buttons" class="mediumHeight little-marge-top">
                             <div>
                                 <small class="statusitem-footer">
-                                <!--
-                                <a ui-sref="home.status({ status: status.statusId })" class="btn-link status-action button-ios">
-                                    <i class="glyphicon glyphicon-eye-open"></i>
-                                    <span translate="tatami.home.status.view"></span>
-                                </a>
-                                -->
-                                <button ng-controller="StatusManagerController" ng-click="showModal(status.statusId)" class="btn-link status-action status-action-reply button-ios">
-                                    <i class="glyphicon glyphicon-comment"></i>
-                                    <span translate="tatami.home.status.reply"></span>
-                                </button>
-                                <button ng-if="status.username != profile.username && !status.shareByMe && !status.statusPrivate" ng-click="shareStatus(status)" class="btn-link status-action status-action-share button-ios">
-                                    <i class="glyphicon glyphicon-retweet"></i>
-                                    <span translate="tatami.home.status.share"></span>
-                                </button>
-                                <button ng-click="favoriteStatus(status)" class="btn-link status-action status-action-favorite button-ios">
-                                    <i class="glyphicon glyphicon-star"></i>
-                                    <span translate="tatami.home.status.favorite"></span>
-                                </button>
-                                <button ng-if="status.username == profile.username" ng-click="deleteStatus(status, ('tatami.status.confirmDelete' | translate))" class="btn-link status-action status-action-delete button-ios">
-                                    <i class="glyphicon glyphicon-trash"></i>
-                                    <span translate="tatami.home.status.delete"></span>
-                                </button>
-                                </small> 
+                                    <!--
+                                    <a ui-sref="home.status({ status: status.statusId })" class="btn-link status-action button-ios">
+                                        <i class="glyphicon glyphicon-eye-open"></i>
+                                        <span translate="tatami.home.status.view"></span>
+                                    </a>
+                                    -->
+                                    <button ng-controller="StatusManagerController" ng-click="showModal(status.statusId)" class="btn-link status-action status-action-reply button-ios">
+                                        <i class="glyphicon glyphicon-comment"></i>
+                                        <span translate="tatami.home.status.reply"></span>
+                                    </button>
+                                    <button ng-if="status.username != profile.username && !status.shareByMe && !status.statusPrivate" ng-click="shareStatus(status)" class="btn-link status-action status-action-share button-ios">
+                                        <i class="glyphicon glyphicon-retweet"></i>
+                                        <span translate="tatami.home.status.share"></span>
+                                    </button>
+                                    <button ng-click="favoriteStatus(status)" class="btn-link status-action status-action-favorite button-ios">
+                                        <i class="glyphicon glyphicon-heart"></i>
+                                        <span translate="tatami.home.status.favorite"></span>
+                                    </button>
+                                    <button ng-if="status.username == profile.username" ng-click="deleteStatus(status, ('tatami.status.confirmDelete' | translate))" class="btn-link status-action status-action-delete button-ios">
+                                        <i class="glyphicon glyphicon-trash"></i>
+                                        <span translate="tatami.home.status.delete"></span>
+                                    </button>
+                                </small>
                             </div>
                         </div>
 
