fixed button row not showing on shared statuses

--- a/src/main/webapp/app/shared/homeContent/HomeContentView.html
+++ b/src/main/webapp/app/shared/homeContent/HomeContentView.html
@@ -67,7 +67,7 @@
                             </small>
                         </div>
 
-                        <div ng-if="status.type == 'STATUS'" ng-style="{ visibility: showButtonRow ? 'visible': 'hidden' }" style="display: block;" id="buttons" class="mediumHeight little-marge-top">
+                        <div ng-if="status.type == 'STATUS' || status.type == 'SHARE'" ng-style="{ visibility: showButtonRow ? 'visible': 'hidden' }" style="display: block;" id="buttons" class="mediumHeight little-marge-top">
                             <div>
                                 <small class="statusitem-footer">
                                     <!--
