implemented Tag View

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -99,6 +99,9 @@
     <!-- Home Module -->
     <script src="/app/components/home/HomeController.js"></script>
 
+    <!-- Tag View -->
+    <script src="/app/components/home/tag/TagHeaderController.js"></script>
+
     <!-- Post New Status Modal -->
     <script src="/app/components/home/post/PostModule.js"></script>
     <script src="/app/components/home/post/StatusManagerController.js"></script>
