--- a/src/main/webapp/app/shared/topmenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topmenu/TopMenuView.html
@@ -19,7 +19,7 @@
             <ul class="nav">
                 <li>
                     <!--<c:if test="${currentPage != null && currentPage == 'home'}">-->
-                        <a ui-sref="home.timeline">
+                        <a ui-sref="home.home.timeline">
                     <!--</c:if>-->
                     <!--<c:if test="${currentPage == null || currentPage != 'home'}">
                         <a href="#/">
@@ -164,9 +164,9 @@
                                     <span class="glyphicon glyphicon-signal"></span>
                                     <span translate="tatami.account.sotd.title"></span>
                                 </a>
-                                <a ui-sref="home.company">
+                                <a ui-sref="home.home.company">
                                     <span class="glyphicon glyphicon-briefcase"></span>
-                                    <span translate="tatami.home.menu.account.companyWall"></span>
+                                    <span translate="tatami.home.menu.account.companyTimeline"></span>
                                 </a>
                             </li>
                             <li class="divider"></li>
