--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -96,17 +96,6 @@
     <script src="/app/components/account/FormController.js"></script>
 
     <!------------------------------------------------------------------------->
-    <!-- Home Module -->
-    <script src="/app/components/home/HomeController.js"></script>
-
-    <!-- Tag View -->
-    <script src="/app/components/home/tag/TagHeaderController.js"></script>
-
-    <!-- Post New Status Modal -->
-    <script src="/app/components/home/post/PostModule.js"></script>
-    <script src="/app/components/home/post/StatusManagerController.js"></script>
-    <script src="/app/components/home/post/StatusCreateController.js"></script>
-
     <!-- Home Sidebar View -->
     <script src="/app/shared/sidebars/home/HomeSidebarModule.js"></script>
     <script src="/app/shared/sidebars/home/HomeSidebarController.js"></script>
@@ -114,6 +103,21 @@
     <!-- Profile Sidebar View -->
     <script src="/app/shared/sidebars/profile/ProfileSidebarModule.js"></script>
     <script src="/app/shared/sidebars/profile/ProfileSidebarController.js"></script>
+
+    <!-- Tag View -->
+    <script src="/app/components/home/tag/TagHeaderController.js"></script>
+
+    <!-- Profile View -->
+    <script src="/app/components/home/profile/ProfileHeaderController.js"></script>
+
+    <!-- List Views -->
+    <script src="/app/shared/lists/status/StatusListController.js"></script>
+    <script src="/app/shared/lists/user/UserListController.js"></script>
+
+    <!-- Post New Status Modal -->
+    <script src="/app/components/home/post/PostModule.js"></script>
+    <script src="/app/components/home/post/StatusManagerController.js"></script>
+    <script src="/app/components/home/post/StatusCreateController.js"></script>
     <!------------------------------------------------------------------------->
 
     <!------------------------------------------------------------------------->
@@ -167,13 +171,13 @@
     <script src="/app/shared/filters/EmoticonFilter.js"></script>
 
     <!-- Shared Services -->
-    <script src="/app/shared/services/GeolocService.js"></script>
-    <script src="/app/shared/services/GroupService.js"></script>
-    <script src="/app/shared/services/ProfileService.js"></script>
+    <script src="/app/shared/services/HomeService.js"></script>
     <script src="/app/shared/services/StatusService.js"></script>
-    <script src="/app/shared/services/TagService.js"></script>
-    <script src="/app/shared/services/TimelineService.js"></script>
+    <script src="/app/shared/services/ProfileService.js"></script>
     <script src="/app/shared/services/UserService.js"></script>
+    <script src="/app/shared/services/GroupService.js"></script>
+    <script src="/app/shared/services/TagService.js"></script>
+    <script src="/app/shared/services/GeolocService.js"></script>
     <script src="/app/shared/services/SearchService.js"></script>
     <!------------------------------------------------------------------------->
     
