--- a/src/main/webapp/app/shared/lists/status/StatusListView.html
+++ b/src/main/webapp/app/shared/lists/status/StatusListView.html
@@ -92,7 +92,7 @@
                                     <span translate="tatami.home.status.share"></span>
                                 </button>
                                 <button ng-click="favoriteStatus(status)" class="btn-link status-action status-action-favorite button-ios">
-                                    <i class="glyphicon glyphicon-heart"></i>
+                                    <i class="glyphicon glyphicon-star"></i>
                                     <span translate="tatami.home.status.favorite"></span>
                                 </button>
                                 <button ng-if="status.username == profile.username" ng-click="deleteStatus(status, ('tatami.status.confirmDelete' | translate))" class="btn-link status-action status-action-delete button-ios">
